# openai_voice_agent_twilio

./: .env.example  README.md  pyproject.toml  requirements.txt  run.py  test_server.py
app/: __init__.py  config.py  main.py
app/models/: schemas.py
app/services/: function_handlers.py  openai_client.py  session_cleanup.py  session_manager.py
app/templates/: twiml.xml
app/utils/: error_handler.py  health_check.py
app/websocket/: connection_manager.py  handlers.py
